--- a/z_dev/index.html
+++ b/z_dev/index.html
@@ -10,8 +10,19 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/z_dev/assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/z_dev/assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/z_dev/assets/img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/z_dev/assets/img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/z_dev/assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://dainedvorak.com/z_dev/assets/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="https://dainedvorak.com/z_dev/assets/img/favicon/safari-pinned-tab.svg" color="#007cff">
+  <link rel="shortcut icon" href="https://dainedvorak.com/z_dev/assets/img/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#007cff">
+  <meta name="msapplication-TileImage" content="https://dainedvorak.com/z_dev/assets/img/favicon/mstile-144x144.png">
+  <meta name="msapplication-config" content="https://dainedvorak.com/z_dev/assets/img/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#007cff">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
