--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -92,7 +92,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>With a rich background in SEO - 10+ years, and experience in technology - 5+ years Cloud egineering, Web Development, and Process Automation Development of templates, web-apps, and Chrome Extensions, leading projects that save hours of work through automation, and elevating web presence through expert SEO experience and custom strategies, and I bring a blend of leadership, innovation, and technical prowess to the table. My journey is marked by continuous learning, evident from multiple certifications, real-world results of tremedous business growth, all stemming from a deep understanding of SEO - On-Page, Off-Page, and Technical. I excel in an enviorment looking for process efficiences, as SEO work can be very mundane, so i truely believe in the power of automation to free our minds to find those strategic opportunties to give our clients the ability to crush their competitors through data informed decisions.</p>
         </div>
 
   <div class="row">
@@ -102,8 +102,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>SEO Expert & Process Automation Innovator + Developer</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Explore my portfolio to witness the impact of automation in real-world projects and SEO strategies that have catapulted businesses to the top of search results. Each project underscores my commitment to excellence and innovation in the tech industry.
             </p>
             <div class="row">
               <div class="col-lg-6">
