update progress on dynamic UI

--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -92,7 +92,9 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>With a rich background in SEO - 10+ years, and experience in technology - 5+ years Cloud egineering, Web Development, and Process Automation Development of templates, web-apps, and Chrome Extensions, leading projects that save hours of work through automation, and elevating web presence through expert SEO experience and custom strategies, and I bring a blend of leadership, innovation, and technical prowess to the table. My journey is marked by continuous learning, evident from multiple certifications, real-world results of tremedous business growth, all stemming from a deep understanding of SEO - On-Page, Off-Page, and Technical. I excel in an enviorment looking for process efficiences, as SEO work can be very mundane, so i truely believe in the power of automation to free our minds to find those strategic opportunties to give our clients the ability to crush their competitors through data informed decisions.</p>
+          <p>
+            Leveraging over 10 years of expertise in SEO and 5 years in technology, including cloud engineering, web development, and process automation, I specialize in leading projects that enhance efficiency through automation and strengthen web presence with tailored SEO strategies. My track record of driving significant business growth is underpinned by a solid foundation in SEO (On-Page, Off-Page, and Technical), continuous professional development, and a suite of relevant certifications. I thrive in environments that prioritize process efficiency and innovation, advocating for the transformative impact of automation to uncover strategic opportunities for data-driven competitive advantage.
+          </p>
         </div>
 
   <div class="row">
@@ -644,7 +646,17 @@
       </div>
     </div>
   </footer><!-- End  Footer -->
-
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>JETTLIFE Tech</span></strong>
+      </div>
+      <div class="credits">
+        Designed by <a href="https://jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
