--- a/z_dev/public/php-dynamic-content/footer.html
+++ b/z_dev/public/php-dynamic-content/footer.html
@@ -1,1 +1,11 @@
-<h5>2024 JETTLIFE TECH</h5>
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>JETTLIFE Tech</span></strong>
+      </div>
+      <div class="credits">
+        Designed by <a href="https://jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
