--- a/z_dev/public/php-dynamic-content/footer.html
+++ b/z_dev/public/php-dynamic-content/footer.html
@@ -1,11 +1,11 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
+    <div class="container bg-dark text-white text-center p-3">
       <div class="copyright">
         &copy; Copyright <strong><span>JETTLIFE Tech</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
+        Designed by <a href="https://client.jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
