--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -71,7 +71,8 @@
           
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>My Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumes</span></a></li>
-          <li><a href="#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work History</span></a></li>
+          <li><a href="#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span><h3></h3>Work HistoryExample heading <span class="badge bg-secondary">New</span></h3>
+          </span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -91,50 +92,7 @@
   <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" class="about">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>About Me</h2>
-          <p>
-            Leveraging over 10 years of expertise in SEO and 5 years in technology, including cloud engineering, web development, and process automation, I specialize in leading projects that enhance efficiency through automation and strengthen web presence with tailored SEO strategies. My track record of driving significant business growth is underpinned by a solid foundation in SEO (On-Page, Off-Page, and Technical), continuous professional development, and a suite of relevant certifications. I thrive in environments that prioritize process efficiency and innovation, advocating for the transformative impact of automation to uncover strategic opportunities for data-driven competitive advantage.
-          </p>
-        </div>
-
-  <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>SEO Expert & Process Automation Innovator + Developer</h3>
-            <p class="fst-italic">
-              Explore my portfolio to witness the impact of automation in real-world projects and SEO strategies that have catapulted businesses to the top of search results. Each project underscores my commitment to excellence and innovation in the tech industry.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>December 30, 1991</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.DaineDvorak.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+913 710 5841</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Shawnee, KS USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Years of Experience:</strong> <span>12+</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(913) 710-5841)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dainedvorak@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Employment:</strong> <i class="bi bi-chevron-right">Available</i></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-    <!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -191,7 +149,7 @@
               </div>
             </div>
 
-            <div>
+            <div class="progress">
               <span class="skill">Plus Many More!</span>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -259,7 +217,6 @@
                 <li>Portland par 127,Orlando, FL</li>
                 <li>(123) 456-7891</li>
                 <li>alice.barkley@example.com</li>
-                <input type="button "
               </ul>
             </div>
 
@@ -277,35 +234,7 @@
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
-        </div>
 
-      </div>
-    </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
