content-development continued

--- a/z_dev/public/php-dynamic-content/0_skills.html
+++ b/z_dev/public/php-dynamic-content/0_skills.html
@@ -1,35 +1,150 @@
-
-
-
-<div class="accordion accordion-flush" id="accordionFlushExample">
+<!--Last updated: 2/7/2024-->
+<div class="container">
+  <div class="accordion accordion-flush" id="accordionFlushExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="flush-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          Accordion Item #1
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          Technical Skills
         </button>
       </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          <div class="row">
+            <div class="col col-md">
+              <ul class="list-display">
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>
+                  Advanced Microsoft Office Skills with Integration
+                  Capabilities
+                </div>
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>Advanced PC Computer Skills
+                </div>
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>Amazon Elastic Compute Cloud (EC2), Amazon Web Services (AWS)
+                </div>
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>API Professional
+                </div>
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>Artificial Intelligence
+                </div>
+                <div class="hoverable">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" id="checkmark">
+
+                    <path fill="#17aa1c"
+                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                  </svg>Automation Testing
+                </div>
+              </ul>
+            </div>
+            <div class="col col-md">
+              <ul class="list-display list-checkmarks">
+                <li>Google Cloud Platform, Google Search Console</li>
+                <li>
+                  Expert in PC Technical Support, Server Optimization (AWS EC2,
+                  LAMP Stack)
+                </li>
+                <li>eCommerce Management</li>
+                <li>
+                  Digital Analytics, SEO (On-Page, Off-Page, Technical), SEM
+                </li>
+                <li>
+                  Data Analysis, Management, Transformation, Visualization
+                </li>
+                <li>Cloud Engineering Expertise on AWS</li>
+              </ul>
+            </div>
+            <div class="col col-md">
+              <ul class="list-display">
+                <li>
+                  Proficient in Various Content Management Systems (CMS) and CRM
+                  Platforms (HubSpot, Bitrix24, ZohoCRM)
+                </li>
+                <li>
+                  Proficiency in Adobe Creative Suite, Schema Markup, Template
+                  Development
+                </li>
+                <li>Node.JS, PHP, VBA Developer</li>
+                <li>Machine Learning</li>
+                <li>LAMP Stack Speed Optimization</li>
+                <li>HTML, CSS, JavaScript Development</li>
+              </ul>
+            </div>
+            <div class="col col-md">
+              <ul class="list-display">
+                <li>Google App Script Developer</li>
+                <li>WordPress Development & Performance Optimization</li>
+                <li>Technical SEO, Website Architecture</li>
+                <li>Software Development</li>
+                <li>Scripting Language Proficiency</li>
+                <li>
+                  QA Analysis Automation, Redirect Management and Bulk QA
+                  Automation
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="flush-headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          Accordion Item #2
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          Marketing and Advertising Skills
         </button>
       </h2>
-      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          Placeholder content for this accordion, which is intended to
+          demonstrate the <code>.accordion-flush</code> class. This is the
+          second item's accordion body. Let's imagine this being filled with
+          some actual content.
+        </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="flush-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Accordion Item #3
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Communication and Interpersonal Skills
         </button>
       </h2>
-      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          Placeholder content for this accordion, which is intended to
+          demonstrate the <code>.accordion-flush</code> class. This is the third
+          item's accordion body. Nothing more exciting happening here in terms
+          of content, but just filling up the space to make it look, at least at
+          first glance, a bit more representative of how this would look in a
+          real-world application.
+        </div>
       </div>
     </div>
   </div>
+</div>
