--- a/z_dev/og-files/index.html
+++ b/z_dev/og-files/index.html
@@ -617,14 +617,15 @@
 
   </main><!-- End #main -->
 
+ 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
+    <div class="container bg-dark text-white text-center p-3">
       <div class="copyright">
         &copy; Copyright 2024<strong><span>JETTLIFE Tech</span></strong>
       </div>
       <div class="credits">
-        Designed and Developed by <a href="https://DaineDvorak.com/">Daine Dvorak dba JETTLIFE Tech</a>
+        Designed by <a href="https://client.jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
