--- a/z_dev/public/php-dynamic-content/0_about-me.html
+++ b/z_dev/public/php-dynamic-content/0_about-me.html
@@ -32,7 +32,7 @@
                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Years of Experience:</strong> <span>12+</span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(913) 710-5841)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dainedvorak@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Employment:</strong> <i class="bi bi-chevron-right">Available</i></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Employment:</strong> <italic>Available</italic></li>
               </ul>
             </div>
           </div>
