--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -410,7 +410,28 @@
           <h2>Resume</h2>
           <p>Below you will find a series of resumes tailored made to specific job titles, if you are looking for the right person for yout companies new expansion of this role, then please reach out and lets talk! </p>
         </div>
-
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Generic Comprehensive Resume</h5>
+                    <p class="card-text">This resume is Comprehensive Resume of all my skills, achievements, work history, and more!</p>
+                    <a href="#" class="btn btn-primary">Download Resume</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Director of SEO Resume</h5>
+                    <p class="card-text">This resume is tailored specifically to the job roles for SEO Manager, Director of SEO, etc.</p>
+                    <a href="#" class="btn btn-primary">Download Resume</a>
+                  </div>
+                </div>
+              </div>
+            </div>
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
