--- a/z_dev/og-files/index.html
+++ b/z_dev/og-files/index.html
@@ -244,6 +244,26 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Generic Comprehensive Resume</h5>
+                    <p class="card-text">This resume is Comprehensive Resume of all my skills, achievements, work history, and more!</p>
+                    <a href="#" class="btn btn-primary">Download Resume</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Director of SEO Resume</h5>
+                    <p class="card-text">This resume is tailored specifically to the job roles for SEO Manager, Director of SEO, etc.</p>
+                    <a href="#" class="btn btn-primary">Download Resume</a>
+                  </div>
+                </div>
+              </div>
+            </div>
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Alex Smith</h4>
