update-site-dev

--- a/z_dev/public/portfolio-details.html
+++ b/z_dev/public/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Daine Dvorak</title>
+  <title>Showcase Details - Daine Dvorak</title>
   <meta content="" name="description">
 
   <!-- Favicons -->
@@ -110,7 +110,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: AI/LLM's, Technical SEO</li>
                 <li><strong>Client</strong>: ASU Company</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
