--- a/z_dev/public/php-dynamic-content/0_facts.html
+++ b/z_dev/public/php-dynamic-content/0_facts.html
@@ -21,7 +21,7 @@
             <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
               <div class="count-box">
                 <i class="bi bi-journal-richtext"></i>
-                <span data-purecounter-start="0" data-purecounter-end="200%" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter">%</span>
                 <p><strong>Projects</strong> Achieved real-world results in significant business growth.
                 </p>
               </div>
