updated dev site

--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -462,8 +462,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> Achieved real-world results in significant business growth.
+              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>SEO SOP Development:</strong> Established over 50 comprehensive SEO SOPs, encompassing a range of tactics and deliverables. This resulted in a 27.5-hour reduction in employee onboarding time and standardized high-quality output.
               </p>
             </div>
           </div>
@@ -472,7 +472,7 @@
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <p><strong>AI Workflow Integration</strong> Integrate AI tools into daily operations, cutting process times by 45%, and boosting team productivity, plus - improving work accuracy & quality.</p>
             </div>
           </div>
 
@@ -486,21 +486,20 @@
 
         </div>
 
-      </div>
     </section><!-- End Facts Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="section-title">
           <h2>Resume</h2>
           <p>Below you will find a series of resumes tailored made to specific job titles, if you are looking for the right person for yout companies new expansion of this role, then please reach out and lets talk! </p>
         </div>
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg" data-aos="fade-up">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Generic Comprehensive Resume</h5>
@@ -509,7 +508,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Director of SEO Resume</h5>
@@ -518,32 +517,31 @@
                   </div>
                 </div>
               </div>
-            </div>
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
+          <div class="col-lg" data-aos="fade-up">
+
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>General Studies &amp; Data Science</h4>
+              <h5>2010 - 2012</h5>
+              <p><em>University of Kansas, Lawrence, KS</em></p>
+              <p>Completed 20 Credit Hours</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>General Studies &amp;</h4>
+              <h5>2012 - 2014</h5>
+              <p><em>Johnson County Community College, Overland Park, KS</em></p>
+              <p>3.5 GPA
+              <br>
+              Completed General Study Courses. 
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>High School Gradute &amp;</h4>
+              <h5>2006 - 2010</h5>
+              <p><em>Saint Thomas Aquiaans High School, Overland Park, KS</em></p>
+              <p>3.9 GPA <br> Graduated top 10% of class.</p>
             </div>
           </div>
 
@@ -816,7 +814,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Passionate about driving growth and exceeding expectations? So am I! Peruse my detailed professional background on my website and, if you're as excited as I am about creating amazing outcomes, use the contact form to reach out. Let's embark on a new professional adventure together!          </p>
         </div>
 
         <div class="row" data-aos="fade-in">
