--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -836,7 +836,7 @@
                   Daine is a brilliant computer specialist. I think he can solve complicated problems that most people cannot.... 
                                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="https://dainedvorak.com/cdn-net/portfolio-website/testimonial-images/Andee-LaMonica-LinkedIn-Photo.jpg" class="testimonial-img" alt="">
                 <h3>Kevin Stuart Cavanaugh</h3>
                 <h4>Store Owner</h4>
               </div>
