--- a/z_dev/public/php-dynamic-content/footer.html
+++ b/z_dev/public/php-dynamic-content/footer.html
@@ -5,7 +5,7 @@
         &copy; Copyright <strong><span>JETTLIFE Tech</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://client.jettlifetech.com/">Daine Dvorak dba JETTLIFE Tech</a>
+        Designed by Daine Dvorak dba <a href="https://client.jettlifetech.com/">JETTLIFE Tech</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
