update system for local dev

--- a/z_dev/public/php-dynamic-content/header.html
+++ b/z_dev/public/php-dynamic-content/header.html
@@ -1,22 +1,22 @@
 <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Daine Dvorak's Portfolio - Updated 2024 - Home</title>
+  <title>Daine Dvorak's Portfolio - 2024 - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="./assets/img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./assets/img/favicon/site.webmanifest">
-  <link rel="mask-icon" href="./assets/img/favicon/safari-pinned-tab.svg" color="#007cff">
-  <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/safari-pinned-tab.svg" color="#007cff">
+  <link rel="shortcut icon" href="https://dainedvorak.com/z_dev/public/assets/img/favicon/favicon.ico">
   <meta name="msapplication-TileColor" content="#007cff">
-  <meta name="msapplication-TileImage" content="./assets/img/favicon/mstile-144x144.png">
-  <meta name="msapplication-config" content="./assets/img/favicon/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="https://dainedvorak.com/z_dev/public/assets/img/favicon/mstile-144x144.png">
+  <meta name="msapplication-config" content="https://dainedvorak.com/z_dev/public/assets/img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#007cff">
 
 
@@ -24,12 +24,15 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="https://dainedvorak.com/z_dev/public/assets/css/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -83,17 +86,23 @@
 
 </script>
 <style>
+  #skillITEM {
+  border: 1.5px solid green;
+  margin-bottom: 1%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
   #checkmark {
     fill: #17aa1c;
-    width: 5%;
+    width: 2%;
     height: auto;
-    padding-bottom: 10px;
+    padding-bottom: 2px;
     margin-right: 10px;
                       }
   .hoverable {
     transition: background-color 0.2s ease;
     align-items: center;
-    padding: 2%;
+    padding: 1%;
     margin: 5px;
 }
 .hoverable:hover {
