outlined the standard Showcase page design

--- a/z_dev/public/showcase-details-template.html
+++ b/z_dev/public/showcase-details-template.html
@@ -108,7 +108,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h1>Project information</h1>
               <ul>
                 <li><strong>Category</strong>: AI/LLM's, Technical SEO</li>
                 <li><strong>Client</strong>: ASU Company</li>
@@ -116,10 +116,31 @@
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
+            </div>
+            <div class="col-lg">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              <h2>Revolutionizing SEO Strategy for Market Domination</h2>
+
+              <h3>Introduction:</h3>
+<p>Leveraging a decade of SEO expertise, I embarked on a transformative journey, redefining search optimization for competitive markets. 🌐🚀</p>
+
+<h3>Challenge:</h3>
+<p>The objective was ambitious: to secure top Google rankings for competitive, non-branded keywords in a highly saturated market.</p>
+
+<h3>Strategy:</h3>
+<p>Drawing from my extensive experience, I implemented a multifaceted SEO strategy. This included optimizing website structures, enhancing page load speeds, and employing innovative content mapping techniques.</p>
+
+<h3></h3>Results:</h3></h3>
+<ul>
+<li>Remarkably achieved 80+ first-place Google rankings for key non-branded keywords.</li>
+<li>This strategic overhaul led to substantial traffic increases and enhanced online visibility.</li>
+<li>My approach not only improved rankings but also set new standards for organic search success.</li>
+</ul>
+<h3>Impact:</h3>
+This case study underscores the significance of adaptive, data-driven SEO strategies in today's dynamic digital landscape.
+
+<h3>Call to Action:</h3>
+<p>For recruiters seeking a seasoned SEO strategist who has proven capabilities in turning challenges into triumphs, I'm open to discussions and opportunities. Let's connect and explore how my expertise can drive your organization's digital success. 📈💬
               </p>
             </div>
           </div>
